<resources>
    <string name="app_name">CacheExample</string>
    <string name="hint_email">Email Address</string>
    <string name="hint_password">Password</string>
    <string name="title_login">Login</string>
    <string name="button_login">Login</string>
    <string name="button_registration">Registration</string>
    <string name="button_forgot_password">Forgot Password?</string>
</resources>