<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="40dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_login_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_login"
        android:gravity="center"
        android:textSize="35sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="80dp"/>

    <EditText
        android:id="@+id/et_email"
        android:hint="@string/hint_email"
        android:background="@drawable/shape_rectangle"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_login_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:textSize="18sp"
        android:inputType="textEmailAddress"
        android:drawableLeft="@drawable/ic_baseline_email_24"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:drawablePadding="12dp"/>

    <EditText
        android:id="@+id/et_password"
        android:hint="@string/hint_password"
        android:background="@drawable/shape_rectangle"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@+id/et_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:textSize="18sp"
        android:inputType="textPassword"
        android:drawableLeft="@drawable/ic_baseline_lock_24"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:drawablePadding="12dp"/>

    <LinearLayout
        android:id="@+id/btn_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:focusable="true"
        app:layout_constraintTop_toBottomOf="@id/et_password"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/button_forgot_password"
        android:textSize="15sp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/button_forgot_password"
            android:textSize="15sp"/>

    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@id/btn_forgot_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/button_login"
        android:textSize="18sp"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/btn_registration"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@id/btn_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/button_registration"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:backgroundTint="@color/white"
        android:layout_marginTop="5dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>